Synonyms/deploy/synonyms-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: playground
  name: synonyms
  labels:
    name: synonyms
    app: synonyms
spec:
  selector:
    name: synonyms-pod
    app: synonyms-app
  ports:
    - port: 80
      targetPort: 80
