Synonyms/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-synonyms
  namespace: playground
  labels:
    name: ingress-synonyms
spec:
  rules:
    - host: synonymsback.faressteen.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: synonyms
                port:
                  number: 80
